centos/edu/10/04-ingress-backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: europe
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: europe
  template:
    metadata:
      labels:
        app: europe
    spec:
      containers:
      - name: europe
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: europe-nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: nginx-html
        configMap:
          name: europe-nginx-config
          items:
          - key: index.html
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: europe
  namespace: world
spec:
  selector:
    app: europe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
