centos/edu/10/08-networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: web
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
